diesel_compile_tests/tests/fail/columns_cannot_be_rhs_of_insert.stderr
error[E0271]: type mismatch resolving `<NoFromClause as AppearsInFromClause<users::table>>::Count == diesel::query_source::Once`
    --> tests/fail/columns_cannot_be_rhs_of_insert.rs:20:18
     |
20   |         .execute(&mut conn)
     |          ------- ^^^^^^^^^ expected struct `diesel::query_source::Once`, found struct `diesel::query_source::Never`
     |          |
     |          required by a bound introduced by this call
     |
note: required for `columns::hair_color` to implement `AppearsOnTable<NoFromClause>`
    --> tests/fail/columns_cannot_be_rhs_of_insert.rs:10:9
     |
10   |         hair_color -> Text,
     |         ^^^^^^^^^^
     = note: 1 redundant requirement hidden
     = note: required for `&columns::hair_color` to implement `AppearsOnTable<NoFromClause>`
     = note: required for `ColumnInsertValue<columns::name, &columns::hair_color>` to implement `InsertValues<users::table, _>`
     = note: required for `diesel::query_builder::insert_statement::ValuesClause<ColumnInsertValue<columns::name, &columns::hair_color>, users::table>` to implement `QueryFragment<_>`
     = note: 1 redundant requirement hidden
     = note: required for `InsertStatement<users::table, diesel::query_builder::insert_statement::ValuesClause<ColumnInsertValue<columns::name, &columns::hair_color>, users::table>>` to implement `QueryFragment<_>`
     = note: required for `InsertStatement<users::table, diesel::query_builder::insert_statement::ValuesClause<ColumnInsertValue<columns::name, &columns::hair_color>, users::table>>` to implement `ExecuteDsl<_, _>`
note: required by a bound in `diesel::RunQueryDsl::execute`
    --> $DIESEL/src/query_dsl/mod.rs
     |
     |         Self: methods::ExecuteDsl<Conn>,
     |               ^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `diesel::RunQueryDsl::execute`
